# dash

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs
frontend/src/views/: home_view.rs  login_view.rs  mod.rs  not_found_view.rs  register_view.rs
migrations/: 20000000000000_user.up.sql
server/: Cargo.toml
server/src/: main.rs  pool.rs
server/src/controllers/: auth_controller.rs  mod.rs  user_controller.rs  ws_controller.rs
server/src/middleware/: auth_token.rs
server/src/strategies/: auth_strategy.rs  user_strategy.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: lib.rs  main.rs
types/: Cargo.toml
types/src/: auth.rs  user.rs
