[package]
name = "dash_backend"
version = "0.1.0"
description = "Full-stack development template in Rust"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
