[package]
name = "dash_server"
version = "0.1.0"
description = "Full-stack development template in Rust"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-signed", "typed-header"] }
base64 = "0.22.1"
bcrypt = "0.17.0"
cookie = "0.18.1"
dotenv = "0.15.0"
email_address = "0.2.9"
futures = "0.3.31"
http = "1.3.1"
jsonwebtoken = "9.3.1"
lettre = "0.11.17"
once_cell = "1.21.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["any", "postgres", "runtime-tokio-rustls", "sqlite"] }
struct_iterable = "0.1.1"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.17.0", features = ["v4"] }

dash_types = { path = "../types", features = ["sqlx"] }

[features]
postgres = []
sqlite = []
