[package]
name = "dash_tauri"
version = "0.1.0"
description = "Full-stack development template in Rust"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
portpicker = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }

dash_backend = { path = "../backend" }

[lib]
name = "dash_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
