[package]
name = "dash_types"
version = "0.1.0"
description = "Full-stack development template in Rust"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
email_address = "0.2.9"
http = "1.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", optional = true }

[features]
sqlx = ["dep:sqlx"]
